Map tiles are now using appropriate open sources
Now using MapQuest or Stamen map tiles; both are open source licensed.
Updated the README.md.
Reorganized code for readability and findability.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,4 +1,16 @@
 #map { 
 	width: 600px; 
-	height: 800px;
+	height: 825px;
+}
+
+.logos {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.logos img {
+    width: 20rem;
+    max-height: 8rem;
 }
